# hacknotts25

./: .gitignore  CHANGELOG.md  Examples.hs  LICENSE  MIDI_GUIDE.md  README.md  dohotgirlslikechordsguitarsolo.mid  hacknotts25-synth.cabal  inspect_midi.hs
Vis/: Helloworld.py
app/: Main.hs
app/Music/: Constants.hs  MIDI.hs  Notes.hs  Render.hs  Types.hs  Util.hs
app/Synth/: Constants.hs  Envelope.hs  Instrument.hs  Oscillator.hs  Types.hs  Util.hs  WaveForm.hs
